notes saying moved to github

--- a/apachetop.html
+++ b/apachetop.html
@@ -46,9 +46,15 @@ tool written by Jeremy Zawodny.</p>
  <li><a href="http://code.google.com/p/apachetop/">Project Code</a> - for additional information, source code, older versions etc..
 </ul>
 
-<p>apachetop is listed on <a target="_blank" href="http://code.google.com">code.google.com</a> so that you can easily subscribe and be notified when new versions are released.</p>
+<p>apachetop code is hosted at <a target="_blank" href="http://github.com/JeremyJones/Apachetop">Github</a>.
+</p>
 
 <h2>News</h2>
+
+<h4>21 May 2010</h4>
+
+<blockquote>Code hosting moved to <a href="http://www.github.com/">Github</a>.
+</blockquote>
 
 <h4>6 November 2008</h4>
 
