updates URLs and my email address. i sold jeremyjones.com years ago...

--- a/apachetop.html
+++ b/apachetop.html
@@ -62,7 +62,7 @@ tool written by Jeremy Zawodny.</p>
 </blockquote>
 
 <hr>
-<address><a href="/">Jeremy Jones</a> &lt;<a href="mailto:jer@jeremyjones.com">jer@jeremyjones.com</a>&gt;</address>
+<address><a href="/">Jeremy Jones</a> &lt;<a href="mailto:jer@jerjones.me">jer@jerjones.me</a>&gt;</address>
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
